# llmpy

./: .gitignore  CLAUDE.md  LICENSE  README.md  compile_readme.sh  pyproject.toml
docs/: 01.Introduction.ipynb  02.Development.md  03.NextSteps.md
scripts/: ollama_test.py  quickstart.py
src/dsllmpy/: __init__.py  openai_client.py  type_defs.py
src/llmpy/: __init__.py  openai_client.py  type_defs.py
tests/: test_llm.py  test_openai_client.py
