[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmpy"
version = "0.1.0"
description = "Python LLM utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.41.0",
    "pydantic>=2.13.4",
    "tiktoken>=0.13.0",
    "tqdm>=4.66",
]


[tool.uv]
dev-dependencies = [
    "python-dotenv>=1.2.2",
    "ipykernel>=7.2.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "ty>=0.0.43",
    "datasets>=5.0.0",
    "nbconvert>=7.17.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/llmpy --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
